Add default price per byte to options page

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-      }
-    </style>
+    <title>Filecoin Retriever Popup</title>
   </head>
   <body>
-    <button id="changeColor"></button>
+    <button id="optionsButton">Options</button>
     <script src="popup.js"></script>
   </body>
 </html>
