--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-        margin: 10px;
-      }
-    </style>
+    <title>Filecoin Retriever Options</title>
   </head>
   <body>
-    <div id="buttonDiv"></div>
-    <div>
-      <p>Choose a different background color!</p>
-    </div>
+    <label for="defaultPrice">Default price per byte</label>
+    <input id="defaultPriceInput" name="defaultPrice" type="number" min="0" step="any" />
+    <button id="saveButton">Save</button>
   </body>
   <script src="options.js"></script>
 </html>
