--- a/src/options/options.html
+++ b/src/options/options.html
@@ -49,6 +49,5 @@
       <tbody id="priceTableBody"></tbody>
     </table>
   </body>
-  <script src="../shared/formatPrice.js"></script>
-  <script src="options.js"></script>
+  <script type="module" src="options.js"></script>
 </html>
