--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <button id="optionsButton">Options</button>
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
   </body>
 </html>
