--- a/public/home.html
+++ b/public/home.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Filecoin Retrieval</title>
   </head>
-  <body>
+  <body style="width: 100%">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
