--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Filecoin Retrieval Popup</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>Filecoin Retrieval</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
